Chore: slicing homepage

--- a/wp-content/themes/hello-elementor-child/starter-hello-elementor-child/assets/src/scss/abstracts/_typo-mixins.scss
+++ b/wp-content/themes/hello-elementor-child/starter-hello-elementor-child/assets/src/scss/abstracts/_typo-mixins.scss
@@ -1,306 +1,306 @@
 @mixin heading-h-1-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 52px;
 	font-weight: 400;
 	line-height: 1.19em;
 }
 
 @mixin heading-h-1-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 52px;
 	font-weight: 500;
 	line-height: 1.19em;
 }
 
 @mixin heading-h-1-semibold-62 {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 52px;
 	font-weight: 600;
 	line-height: undefined;
 }
 
 @mixin heading-h-1-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 52px;
 	font-weight: 800;
 	line-height: 1.19em;
 }
 
 @mixin heading-h-2-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 48px;
 	font-weight: 400;
 	line-height: 1.17em;
 }
 
 @mixin heading-h-2-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 48px;
 	font-weight: 500;
 	line-height: 1.17em;
 }
 
 @mixin heading-h-2-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 48px;
 	font-weight: 600;
 	line-height: 1.17em;
 }
 
 @mixin heading-h-2-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 48px;
 	font-weight: 800;
 	line-height: 1.17em;
 }
 
 @mixin heading-h-3-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 40px;
 	font-weight: 400;
 	line-height: 1.1em;
 }
 
 @mixin heading-h-3-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 40px;
 	font-weight: 500;
 	line-height: 1.1em;
 }
 
 @mixin heading-h-3-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 40px;
 	font-weight: 600;
 	line-height: 1.1em;
 }
 
 @mixin heading-h-3-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 40px;
 	font-weight: 800;
 	line-height: 1.1em;
 }
 
 @mixin heading-h-4-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 30px;
 	font-weight: 400;
 	line-height: 1.13em;
 }
 
 @mixin heading-h-4-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 30px;
 	font-weight: 500;
 	line-height: 1.13em;
 }
 
 @mixin heading-h-4-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 30px;
 	font-weight: 600;
 	line-height: 1.13em;
 }
 
 @mixin heading-h-4-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 30px;
 	font-weight: 800;
 	line-height: 1.13em;
 }
 
 @mixin heading-h-5-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 24px;
 	font-weight: 400;
 	line-height: 1.17em;
 }
 
 @mixin heading-h-5-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 24px;
 	font-weight: 500;
 	line-height: 1.17em;
 }
 
 @mixin heading-h-5-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 24px;
 	font-weight: 600;
 	line-height: 1.17em;
 }
 
 @mixin heading-h-5-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 24px;
 	font-weight: 800;
 	line-height: 1.17em;
 }
 
 @mixin heading-h-6-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 22px;
 	font-weight: 400;
 	line-height: 1.18em;
 }
 
 @mixin heading-h-6-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 22px;
 	font-weight: 500;
 	line-height: 1.18em;
 }
 
 @mixin heading-h-6-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 22px;
 	font-weight: 600;
 	line-height: 1.18em;
 }
 
 @mixin heading-h-6-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 22px;
 	font-weight: 800;
 	line-height: 1.18em;
 }
 
 @mixin body-text-xl-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	font-weight: 400;
 	line-height: 1.5em;
 }
 
 @mixin body-text-xl-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	font-weight: 500;
 	line-height: 1.5em;
 }
 
 @mixin body-text-xl-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	font-weight: 600;
 	line-height: 1.5em;
 }
 
 @mixin body-text-xl-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 20px;
 	font-weight: 800;
 	line-height: 1.5em;
 }
 
 @mixin body-text-lg-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 1.56em;
 }
 
 @mixin body-text-lg-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 	font-weight: 500;
 	line-height: 1.56em;
 }
 
 @mixin body-text-lg-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 	font-weight: 600;
 	line-height: 1.56em;
 }
 
 @mixin body-text-lg-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 18px;
 	font-weight: 800;
 	line-height: 1.56em;
 }
 
 @mixin body-text-md-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 1.5em;
 }
 
 @mixin body-text-md-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 	font-weight: 500;
 	line-height: 1.5em;
 }
 
 @mixin body-text-md-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 	font-weight: 600;
 	line-height: 1.5em;
 }
 
 @mixin body-text-md-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 16px;
 	font-weight: 800;
 	line-height: 1.5em;
 }
 
 @mixin body-text-sm-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 	font-weight: 400;
 	line-height: 1.43em;
 }
 
 @mixin body-text-sm-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 	font-weight: 500;
 	line-height: 1.43em;
 }
 
 @mixin body-text-sm-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 	font-weight: 600;
 	line-height: 1.43em;
 }
 
 @mixin body-text-sm-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 14px;
 	font-weight: 800;
 	line-height: 1.43em;
 }
 
 @mixin body-text-xs-regular {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 12px;
 	font-weight: 400;
 	line-height: 1.5em;
 }
 
 @mixin body-text-xs-medium {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 12px;
 	font-weight: 500;
 	line-height: 1.5em;
 }
 
 @mixin body-text-xs-semibold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 12px;
 	font-weight: 600;
 	line-height: 1.5em;
 }
 
 @mixin body-text-xs-bold {
-	font-family: 'Manrope', sans-serif;
+	font-family: 'Lato', sans-serif;
 	font-size: 12px;
 	font-weight: 800;
 	line-height: 1.5em;
