--- a/wp-content/themes/hello-elementor-child/starter-hello-elementor-child/assets/src/scss/abstracts/_variables.scss
+++ b/wp-content/themes/hello-elementor-child/starter-hello-elementor-child/assets/src/scss/abstracts/_variables.scss
@@ -19,139 +19,26 @@ $laptop-up: 1441px;
 $colors: (
 	'base-white': #ffffff,
 	'base-black': #000000,
-	'primary-25': #f5fbff,
-	'primary-50': #ebf7ff,
-	'primary-100': #d4edff,
-	'primary-200': #afdeff,
-	'primary-300': #81cbff,
-	'primary-400': #3dafff,
-	'primary-500': #0592f5,
-	'primary-600': #057fd4,
-	'primary-700': #0069b1,
-	'primary-800': #00538b,
-	'primary-900': #003961,
-	'secondary-25': #fff6f3,
-	'secondary-50': #ffe9e2,
-	'secondary-100': #ffcfc0,
-	'secondary-200': #ffb59d,
-	'secondary-300': #ff916d,
-	'secondary-400': #ff6431,
-	'secondary-500': #e93a01,
-	'secondary-600': #cc3403,
-	'secondary-700': #892402,
-	'secondary-800': #631900,
-	'secondary-900': #481200,
-	'gray-25': #fcfcfd,
-	'gray-50': #f9fafb,
-	'gray-100': #f2f4f7,
-	'gray-200': #eaecf0,
-	'gray-300': #d0d5dd,
-	'gray-400': #98a2b3,
-	'gray-500': #667085,
-	'gray-600': #475467,
-	'gray-700': #344054,
-	'gray-800': #1d2939,
-	'gray-900': #101828,
-	'danger-25': #fff8f8,
-	'danger-50': #ffe9eb,
-	'danger-100': #ffc8cf,
-	'danger-200': #fe99a6,
-	'danger-300': #ff6a7d,
-	'danger-400': #f9455b,
-	'danger-500': #d0021b,
-	'danger-600': #ad0418,
-	'danger-700': #8b0011,
-	'danger-800': #74000e,
-	'danger-900': #4e0009,
-	'warning-25': #fffcf5,
-	'warning-50': #fffaeb,
-	'warning-100': #fef0c7,
-	'warning-200': #fedf89,
-	'warning-300': #fec84b,
-	'warning-400': #fdb022,
-	'warning-500': #f79009,
-	'warning-600': #dc6803,
-	'warning-700': #b54708,
-	'warning-800': #93370d,
-	'warning-900': #7a2e0e,
-	'done-25': #f6fef9,
-	'done-50': #ecfdf3,
-	'done-100': #d1fadf,
-	'done-200': #a6f4c5,
-	'done-300': #6ce9a6,
-	'done-400': #32d583,
-	'done-500': #12b76a,
-	'done-600': #039855,
-	'done-700': #027a48,
-	'done-800': #05603a,
-	'done-900': #054f31,
+	'clouded-blue': #1d71ed,
+	'natural-wool': #fff5d7,
+	'text': #222222,
+	'tool-blue': #617788,
+	'brilliant-white': #e6f0ff,
+	'snowdrop': #f0ffd0,
+	'aragonite-white': #f2f1f2,
+	'westfall-yellow': #fdd453,
+	'philippine-orange': #ff7300,
 );
 
 $base-white: map.get($colors, 'base-white');
 $base-black: map.get($colors, 'base-black');
-$primary-25: map.get($colors, 'primary-25');
-$primary-50: map.get($colors, 'primary-50');
-$primary-100: map.get($colors, 'primary-100');
-$primary-200: map.get($colors, 'primary-200');
-$primary-300: map.get($colors, 'primary-300');
-$primary-400: map.get($colors, 'primary-400');
-$primary-500: map.get($colors, 'primary-500');
-$primary-600: map.get($colors, 'primary-600');
-$primary-700: map.get($colors, 'primary-700');
-$primary-800: map.get($colors, 'primary-800');
-$primary-900: map.get($colors, 'primary-900');
-$secondary-25: map.get($colors, 'secondary-25');
-$secondary-50: map.get($colors, 'secondary-50');
-$secondary-100: map.get($colors, 'secondary-100');
-$secondary-200: map.get($colors, 'secondary-200');
-$secondary-300: map.get($colors, 'secondary-300');
-$secondary-400: map.get($colors, 'secondary-400');
-$secondary-500: map.get($colors, 'secondary-500');
-$secondary-600: map.get($colors, 'secondary-600');
-$secondary-700: map.get($colors, 'secondary-700');
-$secondary-800: map.get($colors, 'secondary-800');
-$secondary-900: map.get($colors, 'secondary-900');
-$gray-25: map.get($colors, 'gray-25');
-$gray-50: map.get($colors, 'gray-50');
-$gray-100: map.get($colors, 'gray-100');
-$gray-200: map.get($colors, 'gray-200');
-$gray-300: map.get($colors, 'gray-300');
-$gray-400: map.get($colors, 'gray-400');
-$gray-500: map.get($colors, 'gray-500');
-$gray-600: map.get($colors, 'gray-600');
-$gray-700: map.get($colors, 'gray-700');
-$gray-800: map.get($colors, 'gray-800');
-$gray-900: map.get($colors, 'gray-900');
-$danger-25: map.get($colors, 'danger-25');
-$danger-50: map.get($colors, 'danger-50');
-$danger-100: map.get($colors, 'danger-100');
-$danger-200: map.get($colors, 'danger-200');
-$danger-300: map.get($colors, 'danger-300');
-$danger-400: map.get($colors, 'danger-400');
-$danger-500: map.get($colors, 'danger-500');
-$danger-600: map.get($colors, 'danger-600');
-$danger-700: map.get($colors, 'danger-700');
-$danger-800: map.get($colors, 'danger-800');
-$danger-900: map.get($colors, 'danger-900');
-$warning-25: map.get($colors, 'warning-25');
-$warning-50: map.get($colors, 'warning-50');
-$warning-100: map.get($colors, 'warning-100');
-$warning-200: map.get($colors, 'warning-200');
-$warning-300: map.get($colors, 'warning-300');
-$warning-400: map.get($colors, 'warning-400');
-$warning-500: map.get($colors, 'warning-500');
-$warning-600: map.get($colors, 'warning-600');
-$warning-700: map.get($colors, 'warning-700');
-$warning-800: map.get($colors, 'warning-800');
-$warning-900: map.get($colors, 'warning-900');
-$done-25: map.get($colors, 'done-25');
-$done-50: map.get($colors, 'done-50');
-$done-100: map.get($colors, 'done-100');
-$done-200: map.get($colors, 'done-200');
-$done-300: map.get($colors, 'done-300');
-$done-400: map.get($colors, 'done-400');
-$done-500: map.get($colors, 'done-500');
-$done-600: map.get($colors, 'done-600');
-$done-700: map.get($colors, 'done-700');
-$done-800: map.get($colors, 'done-800');
-$done-900: map.get($colors, 'done-900');
+
+$clouded-blue: map.get($colors, 'clouded-blue');
+$natural-wool: map.get($colors, 'natural-wool');
+$text: map.get($colors, 'text');
+$tool-blue: map.get($colors, 'tool-blue');
+$brilliant-white: map.get($colors, 'brilliant-white');
+$snowdrop: map.get($colors, 'snowdrop');
+$aragonite-white: map.get($colors, 'aragonite-white');
+$westfall-yellow: map.get($colors, 'westfall-yellow');
+$philippine-orange: map.get($colors, 'philippine-orange');
