--- a/wp-content/themes/hello-elementor-child/starter-hello-elementor-child/assets/src/scss/components/elementor-widget/__elementor-widget.scss
+++ b/wp-content/themes/hello-elementor-child/starter-hello-elementor-child/assets/src/scss/components/elementor-widget/__elementor-widget.scss
@@ -1,1 +1,7 @@
-// @use 'e-heading';
+@use 'e-button';
+@use 'e-image-animate-scroll';
+@use 'e-icon-box';
+@use 'e-video';
+@use 'e-img-hover';
+@use 'e-bg-color';
+@use 'e-clients-slider';
